@@ -11,7 +11,7 @@ dnl AC_STDC_HEADERS
 AC_HAVE_HEADERS(errno.h fcntl.h stdio.h stdlib.h string.h unistd.h limits.h)
 AC_HAVE_HEADERS(signal.h time.h sys/time.h sys/types.h sys/wait.h math.h)
 AC_HAVE_HEADERS(netdb.h netinet/in.h sys/ioctl.h sys/socket.h sys/stat.h)
-AC_HAVE_HEADERS(sched.h)
+AC_HAVE_HEADERS(sched.h pthread.h)
 AC_HAVE_HEADERS(sys/soundcard.h sys/audio.h)
 AC_HEADER_SYS_WAIT()
 
@@ -21,6 +21,7 @@ AC_TYPE_SIZE_T()
 AC_CHECK_LIB( socket, socket)
 AC_CHECK_LIB( nsl, gethostbyname)
 AC_CHECK_LIB( rt, sched_getscheduler)
+AC_CHECK_LIB( pthread, pthread_create)
 
 SYSTEM_INCLUDE=/usr/include
 
